# monitor-services

./: Cargo.toml  README.md
samples/config/: check-web.yml  custom-command.yml  example.yml
src/: log.rs  main.rs  monitor.rs  prog_settings.rs  report_by_email.rs
test/cfg_dir1/: example.com-https.yml  example.org-https.yml
