[package]
name = "monitor-services"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde-saphyr = "0.0.27"
garde = { version = "0.23.0", features = ["derive", "email", "email-idna", "url"] }
glob = "0.3.3"
regex = "1.12.3"
futures = "0.3.32"
chrono = "0.4.45"
lettre = "0.11.22"
url = "2.5.8"
shell-words = "1.1.1"